# rte-rrtmgp

./: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac  depgen.config.in
.github/workflows/: gitlab-ci.yml
examples/rfmip-clear-sky/: rfmip-clear-sky.test.in  run-rfmip-examples.py  stage_files.py
rrtmgp/: mo_rrtmgp_constants.F90
rrtmgp/kernels/: mo_gas_optics_kernels.F90  mo_reorder_kernels.F90
rrtmgp/kernels-openacc/: mo_gas_optics_kernels.F90
rte/: mo_optical_props.F90
